+ : new feature
- : deprecated feature
* : bugfix or changed code
Bug numbers are references to bugs in http://www.achievo.org/bugzilla
[names] are references to people in the AUTHORS file.
Please do not exceed 80 characters per line.

Changed in ATK 6.2
------------------
+ atkFileEditor is now able to browse through subdirectories. [Bjorn]
+ Added support for muliple dependant attributes in a radiodetails attribute
  and added support for labels for the detail attributes. [Tjeerd]
+ Added support for destination filters in atkManyToManySelectRelation. [Tjeerd]
+ Added the ability to use multiple atkFrontControllers by defining a different
  uri key in the atkFrontController tag. This is done as shown in the following
  example: {atkfrontcontroller uri_param=myuri myuri="/module/control/action"}
  [Erik]
+ Added setNextId, nextid, clearNextId on atkMockDb to simulate nextid
  functionality [Martijn]
+ Added addFields on atkQuery to add multiple fields (with values) at once.
  [Martijn]
+ Allow setting ownerfields for ManytoMany relations [Erik, Peter]
+ Added atkEcho() function for making echo output only from cron. [Yury]
+ Added support for searching with a '/' as seperator for from/to values in a
  free text search for atkDateAttribute. [Tjeerd, Peter]
+ Added node, nodetitle, action and actiontitle as separate entries to
  the stack-trace array. (Achievo Bug 942) [Peter]
+ Added support for objects tat implement the ArrayAccess interface in
  atkStringParser and don't threat strings as an array anymore. [Peter]
+ atkCountryAttribute now has a new list type called "custom", this custom
  list can be customised by calling the new method "setList" with as parameter
  a array of country iso codes. After setting the list you can just request
  the custom list like you would with the "world" or "europe" list.
  [Erik]
+ atkFrontController will now register scripts and styles in child
  controllers after the main controller [Harrie]