@@ -1,0 +1,27 @@
+@import '../../steelblue/styles/top.css';
+
+#banner
+{
+  height: 29px;
+  margin-bottom: 20px;
+}
+
+
+#bannerLogo
+{
+  top: 0px;;
+  height: auto;
+  width: auto;
+  background-color: white;
+}
+
+
+#bannerCustomImage
+{
+  display: none;
+}
+
+input
+{
+  height: auto;
+}
