@@ -7,6 +7,8 @@ Please do not exceed 80 characters per line.
 
 Changed in ATK 6.2
 ------------------
++ Added a new theme called stillblue, which is based on steelblue but with
+  more workspace and frameless [Erik]
 + atkFileEditor is now able to browse through subdirectories. [Bjorn]
 + Added support for muliple dependant attributes in a radiodetails attribute
   and added support for labels for the detail attributes. [Tjeerd]
@@ -167,6 +169,8 @@ Changed in ATK 6.2
 + Added atkCache, see http://www.achievo.org/wiki/ATK_Cache. [Sandy]
 + Added atkFieldSet which can be used to combine attributes in
   edit/view mode. [Peter]
+* Added a getTheme method to the atkdropdownmenu. The method simply calls and
+  return $this->load(). [Erik]
 * Fixed support for multi referential keys in meta M2O relation. [Tjeerd]
 * Fixed issue with O2M relation and persistent filters. [Tjeerd/Peter]
 * Added support for setting a field separator on the multiselectattrib.
